--- a/src/app/(pages)/login/LoginForm/index.module.scss
+++ b/src/app/(pages)/login/LoginForm/index.module.scss
@@ -1,7 +1,7 @@
 @import "../../../_css/common";
 
 .form {
-  margin-bottom: var(--base);
+  width:100%;
   display: flex;
   flex-direction: column;
   gap: calc(var(--base) / 2);
@@ -14,9 +14,18 @@
 }
 
 .submit {
-  margin-top: calc(var(--base) / 2);
+  width:100%
 }
 
 .message {
   margin-bottom: var(--base);
+}
+
+
+.links{
+  display:flex; 
+  align-items:center;
+  justify-content:space-between;
+  width:100%
+
 }
