--- a/src/app/(pages)/login/index.module.scss
+++ b/src/app/(pages)/login/index.module.scss
@@ -14,7 +14,7 @@
   }
 
   p {
-    color: var(--color-gray-500);
+    color: #3498db; 
   }
 }
 
@@ -82,11 +82,12 @@
   padding: 50px;
   border-radius: 10px;
 
-  @include mid-break {
+ @include mid-break {
     backdrop-filter: blur(30px);
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: #4caf50; /* Replace with your preferred vibrant color */
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  }
+}
+
 
   @include small-break {
     padding: 30px;
