--- a/src/app/_components/AdminBar/index.module.scss
+++ b/src/app/_components/AdminBar/index.module.scss
@@ -48,6 +48,6 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: var(--light-gray);
+  background-color:  #ff6f61; 
   height: 2px;
 }
